# onequantum-mentorship-Apr2022

./: Creating_My_First_Package.docx  README.md
Battleship_game/: README.md  setup.cfg
Battleship_game/src/battleship_board/: battelship.py
Battleship_game/src/example_package_mmetawei.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Packaging_Tutorial/src/example_package_YOUR_USERNAME_HERE.egg-info/: PKG-INFO
closure/: QNLP_exp_IQPAnsatz_aer.ipynb  QNLP_exp_quantum_vs_classical.ipynb  QNLP_exp_v4_IQPAnsatz_aer.ipynb  QNLP_exp_v4_Sim14_aer.ipynb  QNLP_exp_v4_Sim15_aer.ipynb  QNLP_exp_v4_StrongEnt_aer.ipynb  helper.py
