[metadata]
name = example-package-mmetawei
version = 0.0.1
author = Maha Metawei
author_email = maha.abdelaziz@gmail.com
description = A small battleship board game example
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mmetawei/onequantum-mentorship-Apr2022
project_urls =
    Bug Tracker = https://github.com/mmetawei/onequantum-mentorship-Apr2022/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src